[Gtk] navigator.plugins contains too many plugin entries. First one are garbages https://bugs.webkit.org/show_bug.cgi?id=102438

Patch by Arnaud Renevier <a.renevier@sisa.samsung.com> on 2012-12-05
Reviewed by Xan Lopez.

Source/WebKit/gtk:

In getPluginInfo, outPlugins is resized to plugins.size and then,
plugins are appended to it. So at the end, outPlugins will be twice
too large, and first half will contain null objects. As outPlugins
size is 0 when calling getPluginInfo, we don't need to resize it.

* WebCoreSupport/PlatformStrategiesGtk.cpp:
(PlatformStrategiesGtk::getPluginInfo):

LayoutTests:

Add a test to check that navigator.plugins only contain valid plugin
objects.

* plugins/navigator-plugins-expected.txt: Added.
* plugins/navigator-plugins.html: Added.
* plugins/script-tests/navigator-plugins.js: Added.

Canonical link: https://commits.webkit.org/122279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136697 268f45cc-cd09-0410-ab3c-d52691b4dbfc